# TensorMesh

./: .gitignore  CHANGELOG.md  CNAME  LICENSE  MANIFEST.in  README.md  ROADMAP.md  TODO.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  verify_install.py
.github/workflows/: publish.yml
_modules/: index.html
_modules/tensormesh/: material.html
_modules/torch_sla/: sparse_tensor.html
_sources/api/: nn.rst.txt  operator.rst.txt  optimizer.rst.txt
_sources/community/: citing.rst.txt  contributing.rst.txt  discord.rst.txt  github_issues.rst.txt  index.rst.txt
_sources/example_gallery/: diffusion.rst.txt  index.rst.txt  inverse_design.rst.txt  physics_informed.rst.txt
_sources/getting_started/: index.rst.txt
_sources/performance/: benchmarks.rst.txt  index.rst.txt  profiling.rst.txt
_sources/user_guide/: boundary_conditions.rst.txt  concepts.rst.txt  differentiability.rst.txt  elements_and_quadrature.rst.txt  linear_solvers.rst.txt  time_integration.rst.txt
api/: assemble.html  dataset.html  distributed.html  element.html  functional.html  index.html  material.html  mesh.html  nn.html  ode.html  operator.html  optimizer.html  sparse.html  visualization.html
benchmark/assemble/: compare_assemble.py
benchmark/mm/: mm_compare.py
benchmark/pipeline/: .test.py.swp  compare_linear_poisson.py  compare_linear_wave.py  compare_pipeline.py
benchmark/solve/: solve_compare.py  test.py
community/: citing.html  contributing.html  discord.html  github_discussions.html  github_issues.html  index.html
docs/: TRANSLATION_GUIDE.md  requirements-translate.txt  requirements.txt
docs/scripts/: batched_workflows_figures.py  differentiability_figures.py  translate_po.py
docs/source/: README.md  conf.py  index.rst  requirements.txt
example_gallery/: basics.html  dataset.html  diffusion.html  distributed.html  index.html  inverse_design.html  maxwell.html  physics_informed.html  poisson.html  wave.html
example_gallery/fluid/: cavity.html  cylinder_flow.html  flow_obstacles.html  index.html  rayleigh_benard.html  taylor_green.html
example_gallery/solid/: cantilever_beam.html  drucker_prager_triaxial.html  elastic_footing.html  hertzian_contact.html  hyperelastic_beam.html  index.html  plasticity_strip.html
examples/AC/: ac.py  ac_general.py
examples/basics/: element_gallery.py
examples/basis/: basis.py  basis_fn.py  export_basis.py
examples/heat/: heat.py  heat_dataset.py
examples/inverse_design/: coefficient_identification.py  compliance_topology.py  mma_optimizer.py  thermal_topology.py
examples/linear_elasticity/: dynamics2D.py  elasticity.py  kirchhoff_plate_bending.py  kirchhoff_plate_bending_skfem.py  linearelasticity.py  press_hollow2D.py  press_hollow3D.py  press_hollow_cube.vtk  press_hollow_rectangle.py  press_rectangle.py  topology_optimization.py
examples/mesh/: anim_mesh.py  element_adjacency.ipynb  export_plot_mesh.py  node_adjacency.ipynb  plot_mesh.py
examples/poisson/: README.md  computation_graph  poisson.py  poisson_batch.py  poisson_dataset.py  poisson_h_adaptivity.py  poisson_optimization.py
examples/profile/: mem_dofs_relation.py  profile_time_mem.py
examples/topo_optim/: example1.py
examples/wave/: defect_detection.py  defect_detection_iso.py  wave.py  wave_.py
fem/: FEM.md  estr.py  geom_mltdim.py  lfcnsp.py  ndist_mltdim.py  ndist_onedim.py  poly_mltdim.py  poly_onedim.py  qrule_mltdim.py  qrule_onedim.py  str_core.py  tens_core.py  test.py  transf.py
getting_started/: index.html  installation.html  quickstart.html  verify_install.html
performance/: benchmarks.html  index.html  profiling.html  scaling_guide.html
tensormesh/: __init__.py  vmap.py  zen.py
tensormesh/assemble/: __init__.py  builtin.py  element_assembler.py  facet_assembler.py  facet_assmbler.py  node_assembler.py  projector.py
tensormesh/distributed/: assemble.py  mesh.py
tensormesh/element/: __init__.py  basis.py  element.py  element_type.py  element_type2dimension.py  element_type2order.py  normal.py  plot.py  polynomial.py  quadrature.py  transformation.py  types.py
tensormesh/functional/: __init__.py  elasticity.py  ops.py  plastic.py
tensormesh/mesh/: adjacency.py  mesh.py
tensormesh/nn/: __init__.py  buffer_dict.py  buffer_list.py
tensormesh/ode/: __init__.py  builtin.py  explicit_rungekutta.py  implicit_linear_rungekutta.py  rungekutta.md
tensormesh/operator/: __init__.py  condense.py
tensormesh/profile/: __init__.py  cpu_mem_profiler.py  cuda_mem_profiler.py  cuda_mem_profiler_deprecated.py  time_profiler.py  utils.py
tensormesh/sparse/: __init__.py  matrix.py  nonlinear_solve.py  utils.py
tensormesh/visualization/: __init__.py  draw_element_value.py  draw_facet.py  draw_graph.py  draw_mesh.py  draw_point_value.py  matplotlib.py  pyvista.py  stream_plotter.py  utils.py
tests/assemble/: test_drucker_prager_triaxial_example.py  test_element.py  test_element_assemble.py  test_facet.py  test_node.py  test_node_assemble.py  test_projector.py
tests/element/: test_basis.py  test_normal.py  test_polynomial.py  test_quadrature.py  test_transformation.py
tests/functional/: test_elasticity.py  test_operator.py
tests/mesh/: test_element_adjacency.py  test_node_adjacency.py
tests/ode/: test_explicit_euler.py  test_implicit_linear_euler.py  test_midpoint_linear_euler.py
tests/operator/: test_condenser.py
tests/quadrature/: __init__.py  test_line.py  test_quad.py  test_tetra.py  test_tri.py
tests/shape/: test_quad.py  test_tetra.py  test_tri.py
tests/sparse/: test_add.py  test_block_coo.py  test_combine.py  test_spmm.py  test_spsolve.py
torch_fem/: __init__.py
torch_fem/assemble/: __init__.py  boundary_assmbler.py  (+5 more)
user_guide/: batched_workflows.html  boundary_conditions.html  concepts.html  differentiability.html  elements_and_quadrature.html  forms.html  index.html  linear_solvers.html  meshes.html  time_integration.html
zh/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
(+476 files in other folders)
