[build-system]
requires=["flit_core >=3.2,<4"]
build-backend="flit_core.buildapi"

[project]
name="torch-fem"
version="0.1.0"
authors=[
    {name="walkerchi", email="walker.chi.000@gmail.com"},
]
description="Graph Neural Network Library for PyTorch"
readme="README.md"
requires-python=">=3.8"
keywords=[
    "deep-learning",
    "ai-for-science",
    "pytorch",
    "finite-element-methods",
    "geometric-deep-learning",
    "graph-neural-networks",
    "graph-convolutional-networks",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies=[
    "tqdm",
    "numpy",
    "scipy",
    "torch>=1.8.0",
    "meshio",
    "matplotlib", 
    "pyvista",
    "toml",
    "gmsh",
    "matplotlib"
]

[project.optional-dependencies]
benchmark=[
    "scikit-fem",
    "fenics",
    "pandas",
    "petsc4py",
    "matplotlib",
    "seaborn"
]
test=[
    "pytest",
    "pytest-cov",
]

[project.urls]
homepage="https://torch-fem.readthedocs.io"
documentation="https://torch-fem.readthedocs.io"
repository="https://github.com/walkerchi/torch-fem.git"
changelog="https://github.com/walkerchi/torch-fem/blob/master/CHANGELOG.md"

[tool.flit.module]
name="torch_fem"

[tool.yapf]
based_on_style = "pep8"
split_before_named_assigns = false
blank_line_before_nested_class_or_def = false


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
skip = [".gitignore", "__init__.py"]

[tool.ruff]  # https://docs.astral.sh/ruff/rules
select = [
    "D",  # pydocstyle
]
ignore = [
    "D100",  # TODO: Don't ignore "Missing docstring in public module"
    "D101",  # TODO: Don't ignore "Missing docstring in public class"
    "D102",  # TODO: Don't ignore "Missing docstring in public method"
    "D103",  # TODO: Don't ignore "Missing docstring in public function"
    "D104",  # TODO: Don't ignore "Missing docstring in public package"
    "D105",  # Ignore "Missing docstring in magic method"
    "D107",  # Ignore "Missing docstring in __init__"
    "D205",  # Ignore "blank line required between summary line and description"
]
src = ["torch_fem"]
line-length = 80
indent-width = 4
target-version = "py38"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = [
    "--capture=no",
    "--color=yes",
    "-vv",
]
filterwarnings = [
    "ignore:distutils:DeprecationWarning",
    # Filter `torch` warnings:
    "ignore:The PyTorch API of nested tensors is in prototype stage:UserWarning",
    "ignore:scatter_reduce():UserWarning",
    "ignore:Sparse CSR tensor support is in beta state:UserWarning",
    "ignore:Sparse CSC tensor support is in beta state:UserWarning",
    "ignore:torch.distributed._sharded_tensor will be deprecated:DeprecationWarning",
]

[tool.pylint.messages_control]
disable = [
    "import-outside-toplevel",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "empty-docstring",
    "import-error",
    "too-many-arguments",
    "arguments-differ",
    "invalid-name",
    "redefined-builtin",
]
attr-rgx = "[A-Za-z_][A-Za-z0-9_]*$"
argument-rgx = "[A-Za-z_][A-Za-z0-9_]*$"
variable-rgx = "[A-Za-z_][A-Za-z0-9_]*$"
generated-members = ["torch.*"]

[tool.coverage.run]
source = ["torch_fem"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pass",
    "raise NotImplementedError",
    "register_parameter",
    "torch.cuda.is_available",
]